# cli-agent

./: .gitignore  README.md  TEST_SCENARIOS.md  app.py  pyproject.toml  system_prompt.md  test_cases.csv  test_runner.py
